Fix name input style in dark mode

--- a/src/components/ExportDialog.scss
+++ b/src/components/ExportDialog.scss
@@ -36,6 +36,7 @@
       height: calc(1rem - 3px);
 
       &--readonly {
+        background: none;
         border: none;
         &:hover {
           background: none;
